--- a/aula 3/index.html
+++ b/aula 3/index.html
@@ -18,6 +18,25 @@
                 <dd>Organização de conteúdo</dd>
                 <dd>Conteúdo</dd>
         </dl>
+        <p>Informe seu nome:</p><form method = "get">
+            <label>Nome:
+                <input  name ="submitted-nome" autocomplete="nome">
+            </label>
+            <button>Save</button>
+        </form>
+        <p>Informe sua matrícula:</p><form method = "post">
+            <label>matrícula:
+                <input  matricula ="submitted-matricula" autocomplete="matricula">
+            </label>
+            <button>Save</button>
+        </form>
+        <a href="https://www.ibmec.br/">Site da instituição</a>
+
+        <p> Lorem,<strong> ipsum dolor sit amet consectetur adipisicing elit.</strong>
+            Ipsam, <del>libero nihil deserunt, aliquid quos minus, explicabo similique suscipit quaerat fuga delectus.</del>
+            <em>aliquid totam id aperiam deserunt earum libero ipsam?</em></p>
+            <audio controls src="midias/light-my-fire.mp3"></audio>
+            <video controls src="midias/doguinho.mp4" ></video>
 
 </body>
 </html>
