--- a/aula 3/index.html
+++ b/aula 3/index.html
@@ -6,7 +6,7 @@
     <title>Trabalho da terceira aula</title>
 </head>
 <body>
-    <h1> Terceira aula de desenvolvimento web</h1>
+    <h1 id="h1"> Terceira aula de desenvolvimento web</h1>
     <p> Seja bem vindo à terceira aula de desenvolvimento web.</p>
     <h2> Principais tópicos da aula</h2>
     <dl><h3> de um documento html relacionado à metadados: </h3>
@@ -31,7 +31,7 @@
             <button>Save</button>
         </form>
         <a href="https://www.ibmec.br/">Site da instituição</a>
-
+        <a href="#h1">sa</a>
         <p> Lorem,<strong> ipsum dolor sit amet consectetur adipisicing elit.</strong>
             Ipsam, <del>libero nihil deserunt, aliquid quos minus, explicabo similique suscipit quaerat fuga delectus.</del>
             <em>aliquid totam id aperiam deserunt earum libero ipsam?</em></p>
