--- a/Aula 7/detalhes.html
+++ b/Aula 7/detalhes.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src = "arquivo.js" defer></script>
-    <link rel="stylesheet" href="estilo.css">
+    <script src = "detalhes.js" type = "text/javascript"></script>
 </head>
 <body>
-    <div id="container">
-             
-    </div>
     
 </body>
 </html>
